[gd_scene load_steps=4 format=3 uid="uid://cy28a7t8aad57"]

[ext_resource type="Script" path="res://scripts/world_2_game_over.gd" id="1_d5nma"]
[ext_resource type="Texture2D" uid="uid://bndcymrejoy5a" path="res://assets/game-over.png" id="2_01sjl"]
[ext_resource type="FontFile" uid="uid://c5imtc2ksu2y5" path="res://Enchanted Land fonte.otf" id="3_2y8ke"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5nma")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0470588, 0.0470588, 0.639216)

[node name="GameOverImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 125)
texture = ExtResource("2_01sjl")
expand_mode = 1
stretch_mode = 5

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 35)
theme_override_colors/font_color = Color(0.972549, 0.686275, 0.372549, 1)
theme_override_colors/font_hover_color = Color(1, 0.521569, 0.388235, 1)
theme_override_colors/font_outline_color = Color(0.835294, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_2y8ke")
theme_override_font_sizes/font_size = 48
text = "RETRY"
flat = true

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
